tests/machine/x/kt/partial_application.error
Error on line 0: kotlinc error: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kt/partial_application.kt:6:18: error: no value passed for parameter 'b'
	val add5 = add(5)
                 ^
/workspace/mochi/tests/machine/x/kt/partial_application.kt:7:10: error: expression 'add5' of type 'Int' cannot be invoked as a function. The function 'invoke()' is not found
	println(add5(3))
         ^

1: fun add(a: Int, b: Int): Int {
