tests/machine/x/kt/partial_application.kt
fun add(a: Int, b: Int): Int {
	return (a + b)
}

fun main() {
	val add5 = add(5)
	println(add5(3))
}
